Integración del módulo de consumibles

--- a/src/views/departamento/departamento.ejs
+++ b/src/views/departamento/departamento.ejs
@@ -334,6 +334,13 @@
                         <span class="sidebar-text">Equipos Asignados</span>
                     </a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link " href="/consumibles">
+                        <i class="bi bi-box-seam me-2"></i>
+                        <span class="sidebar-text">Consumibles</span>
+                    </a>
+                </li>
                 
                 <li class="nav-item">
                     <a class="nav-link text-white sidebar-link" href="/impresoras">
