--- a/src/views/dashboard/index.ejs
+++ b/src/views/dashboard/index.ejs
@@ -388,6 +388,13 @@
                     </li>
 
                 <li class="nav-item">
+                    <a class="nav-link text-white sidebar-link " href="/consumibles">
+                        <i class="bi bi-box-seam me-2"></i>
+                        <span class="sidebar-text">Consumibles</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
                     <a class="nav-link text-white sidebar-link" href="/impresoras">
                         <i class="bi bi-printer me-2"></i>
                         <span class="sidebar-text">Impresoras</span>
