Solución a error en consumibles

--- a/src/views/consumibles/consumibles.ejs
+++ b/src/views/consumibles/consumibles.ejs
@@ -1012,6 +1012,14 @@ async function cargarConsumibles(page = 1) {
         }
 
         // Remover campo de equipo
+  function removerEquipo(id) {
+    const equipoDiv = document.getElementById(`equipo-${id}`);
+    if (equipoDiv) {
+        equipoDiv.remove();
+    }
+}
+
+        // Remover campo de equipo
   function removerEquipoEdit(id) {
     const equipoDiv = document.getElementById(`equipo-edit-${id}`);
     if (equipoDiv) {
